--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="three columns">
         <br><br>
-           <img class="profile-pic"  src="images/profile.jpg" alt="" />
+           <img class="profile-pic"  src="images/profile.png" alt="" />
 
         </div>
 
