--- a/index.html
+++ b/index.html
@@ -545,8 +545,8 @@
             <th><b>CALCULATOR APP</b></th>
             </tr>
             <tr>
-            <td><center><img src="/images/hangman.png" alt="Girl in a jacket" width="200" height="400"></center></td>
-            <td><center><img src="/images/calculator.png" alt="Girl in a jacket" width="190" height="300"></center></td>
+            <td><center><img src="images/hangman.png" alt="hangman" width="200" height="400"></center></td>
+            <td><center><img src="images/calculator.png" alt="calculator" width="190" height="300"></center></td>
             </tr>
             </tr>
             <tr>
