--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             <tr>
             <td>
                   <center>
-                <a href="https://github.com/dianakalil/pyhtongame" target="_blank" class="button" download><i class="fa fa-download "></i>TRY HERE</a>
+                <a href="https://github.com/dianakalil/pyhtongame" target="_blank" class="button" ><i class="fa fa-download "></i>TRY HERE</a>
                   </center></td>
                   <td>
                      <center>
