update href again lol

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                   </center></td>
                   <td>
                      <center>
-                   <a href="https://dianakalil.github.io/mycalculator/" target="_blank" class="button" download><i class="fa fa-download "></i>TRY HERE</a>
+                   <a href="https://dianakalil.github.io/mycalculator/" target="_blank" class="button" ><i class="fa fa-download "></i>TRY HERE</a>
                      </center></td>
             </tr>
             </table>
