--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="current"><a  href="#about">ABOUT</a></li>
        <li><a class="smoothscroll" href="#background">BACKGROUND</a></li>
             <li><a class="smoothscroll" href="#activity">HOBBY</a></li>
-            <li><a class="smoothscroll" href="#favVideo">VIDEO</a></li>
+            <li><a class="smoothscroll" href="#favVideo">PROJECT</a></li>
             <li><a class="smoothscroll" href="#contact">CONTACT</a></li>
         </ul> <!-- end #nav -->
 
