--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
            <ul class="social">
      <li><a href="https://twitter.com/dianakalil" target="_blank" ><i class="fa fa-twitter"></i></li></a>
-               <li><a href="https://www.instagram.com/deanakalil/" target="_blank" ><i class="fa fa-instagram"></i></li></a>
+               <li><a href="https://www.instagram.com/deanawho/" target="_blank" ><i class="fa fa-instagram"></i></li></a>
                <li><a href="https://t.me/dianakalil" target="_blank" ><i class="fa fa-telegram"></i></li></a><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
            </ul>
         <br>
